<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.example.faceregonatio.ui.activity.signup.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.9"
        android:background="@drawable/background2"
        tools:context=".ui.activity.signup.SignUp">

        <ProgressBar
            android:id="@+id/signup_prog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewmodel.Visibility ? View.GONE : View.VISIBLE }"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/signUp_parent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="@{viewmodel.Visibility ?  View.VISIBLE : View.GONE  }"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/g22"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.2" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hint_color"
                app:layout_constraintTop_toBottomOf="@+id/g22"
                app:passwordToggleTint="@color/white">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_signup"
                    error="@{viewmodel.usernameError}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start"
                    android:layout_marginEnd="@dimen/margin_end"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:padding="@dimen/padding"
                    android:text="@={viewmodel.username}"
                    android:textColor="@color/white"
                    android:textColorHint="@color/hint_color"
                    android:textSize="@dimen/font_title" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/g222"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.33" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hint_color"
                app:layout_constraintTop_toBottomOf="@+id/g222"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_signup"
                    error="@{viewmodel.emailError}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start"
                    android:layout_marginEnd="@dimen/margin_end"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/padding"
                    android:text="@={viewmodel.email}"
                    android:textColor="@color/white"
                    android:textColorHint="@color/hint_color"
                    android:textSize="@dimen/font_title"
                    app:layout_constraintTop_toBottomOf="@+id/g222" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/g23"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.43" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hint_color"
                app:layout_constraintTop_toBottomOf="@+id/g23"
                app:passwordToggleTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_signup"
                    error="@{viewmodel.phoneError}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start"
                    android:layout_marginEnd="@dimen/margin_end"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:padding="@dimen/padding"
                    android:text="@={viewmodel.phone}"
                    android:textColor="@color/white"
                    android:textColorHint="@color/hint_color"
                    android:textSize="@dimen/font_title"
                    app:layout_constraintTop_toBottomOf="@+id/g23" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/g33"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.53" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hint_color"
                app:layout_constraintTop_toBottomOf="@+id/g33"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pass_signup"
                    error="@{viewmodel.passwordError}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start"
                    android:layout_marginEnd="@dimen/margin_end"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="@dimen/padding"
                    android:text="@={viewmodel.password}"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_title"
                    app:layout_constraintTop_toBottomOf="@+id/g33" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/g44"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.68" />

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginEnd="@dimen/margin_end"
                android:background="@color/blue"
                android:onClick="@{()->viewmodel.signUp()}"
                android:padding="@dimen/padding"
                android:text="@string/Create"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/font_title"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/g44" />

            <TextView
                android:id="@+id/login_move"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/already_have_acc"
                android:onClick="@{()->viewmodel.setSignInIntent()}"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_signup" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>